@@ -1,12 +1,13 @@
 Pending changes in the mainline
 ===============================
 
-* URI "/system"
+* Use HTTP Content-Disposition to set a filename when downloading JSON/DCM
+* URI "/system" for general information about Orthanc
 * Versioning info and help on the command line
 * Improved logging
 * Possibility of dynamic linking against jsoncpp, sqlite, boost and dmctk
 * Fix some bugs
-* Switch to 8042 port for HTTP
+* Switch to default 8042 port for HTTP
 
 
 Version 0.2.2 (2012/10/04)
